crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_common_redaction.snap
---
source: src/testing/snapshot.rs
assertion_line: 83
expression: "serde_json::to_string_pretty(value).unwrap_or_else(|_|\n\"invalid json\".to_string())"
---
{
  "id": "[UUID]",
  "timestamp": "[TIMESTAMP]",
  "message": "test message"
}
