crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_complex_nested_struct.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{:#?}\", value)"
---
Outer {
    inner: Inner {
        value: 42,
        name: "test",
    },
    count: 10,
}
