crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_enum_variants.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{:#?}\", value)"
---
[
    Variant1,
    Variant2(
        "test",
    ),
    Variant3 {
        field: 42,
    },
]
