crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_fixture_nested_json.snap
---
source: src/testing/snapshot.rs
expression: "serde_json::to_string_pretty(value).unwrap_or_else(|_|\n\"invalid json\".to_string())"
---
{
  "metadata": {
    "count": 2,
    "version": "1.0.0"
  },
  "users": [
    {
      "id": 1,
      "name": "Alice",
      "tags": [
        "admin",
        "user"
      ]
    },
    {
      "id": 2,
      "name": "Bob",
      "tags": [
        "user"
      ]
    }
  ]
}
