crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_fixture_simple_json.snap
---
source: src/testing/snapshot.rs
expression: "serde_json::to_string_pretty(value).unwrap_or_else(|_|\n\"invalid json\".to_string())"
---
{
  "name": "test",
  "value": 42
}
