crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_redacted_sensitive.snap
---
source: src/testing/snapshot.rs
expression: "serde_json::to_string_pretty(value).unwrap_or_else(|_|\n\"invalid json\".to_string())"
---
{
  "created_at": "[TIMESTAMP]",
  "id": "[UUID]",
  "message": "test",
  "password": "[PASSWORD]",
  "secret": "[SECRET]",
  "timestamp": "[TIMESTAMP]",
  "token": "[TOKEN]",
  "updated_at": "[TIMESTAMP]",
  "uuid": "[UUID]"
}
