crates/chicago-tdd-tools/src/testing/snapshots/chicago_tdd_tools__testing__snapshot__test_snapshot_debug.snap
---
source: src/testing/snapshot.rs
expression: "format!(\"{:#?}\", value)"
---
[
    (
        "key1",
        "value1",
    ),
    (
        "key2",
        "value2",
    ),
    (
        "key3",
        "value3",
    ),
]
